# src/features/users/dto/index.ts
@@ -1,3 +1,4 @@
 export { CreateUserDto } from './create-user.dto';
 export { GetUsersDto } from './get-users.dto';
+export { TransferMoneyDto } from './transfer-money.dto';
 export { UpdateUserDto } from './update-user.dto';
